Run-AlCops doesn't use previousApp if it is the same version as the app
Issue #1704 Run-AlValidation with "preprocessorSymbols"
Issue #1729 Second container on same external database causes previous containers to stop working
Issue #1739 Publish-BcContainerApp fails with "The remote server returned an error: (403) Forbidden

2.0.5
Issue #1668 Run-AlValidation fails if app filename has a comma (and there is only one app)
Issue #1675 Convert-BcAppsToRuntimePackages doesn't work with only one app.
Issue #1678 Setup-BcContainerTestUsers fails on version 18
Issue #1682 add silent mode to import module
Flush-ContainerHelperCache will also cleanup generic images not matching your OS
Add BcAuthContext parameter to functions Create-AadAppsForNav, Create-AadUsersInBcContainer and Replace-BcServerContainer (note that resource should be https://graph.windows.net)
Modify Run-ConnectionTestToBcContainer to connect and open Extension Management. Basically check whether people can uninstall your app.

2.0.4
Remove-BcEnvironment fails after waiting for environment removal
Import-TestToolkitToBcContainer fails when installing apps in online environment unless a container called bcserver exists
Add parameter -replacePackageId to Replace-DependenciesInAppFile to allow process to change package id in an app
Add parameter -replacePackageId to Publish-BcContainerApp to allow process to change package id in an app
Run-AlPipeline using a BcSaaS Sandbox environment to use replacePackageId when publishing previousApps and add delay to avoid conflicts
New-BcEnvironment to wait for other environments being created before creating
Specifying TestRunnerOnly installs all tests when not using online SaaS environments
Add parameter applicationInsightsKey to Run-AlPipeline to stamp applicationInsightsKey into app.json for all apps

2.0.3
Issue #1655 variable $scopes not set
Issue #1654 and #1656 Publish-BcContainerApp where the filename contains a comma fails.